# magi-system

./: .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt
python/: config.example.toml  pyproject.toml  requirements.txt
python/magi_system/: .env.example  __init__.py  __main__.py  agent.py  cli.py  config.py  config_loader.py  logging_config.py  pipeline.py
python/magi_system/clarification/: __init__.py  clarifier_agent.py
python/magi_system/consensus/: __init__.py  discussion.py  divergence.py
python/magi_system/discussion/: __init__.py
python/magi_system/planning/: __init__.py  planner_agent.py
python/magi_system/reflection/: __init__.py  reflection_agents.py
python/magi_system/search/: __init__.py  aggregator.py  effort_config.py  (+1 more)
python/tests/: conftest.py  test_aggregator.py  test_clarifier_agent.py  test_cli.py  test_config.py  test_config_loader.py  test_consensus.py  test_consensus_agent.py  test_content_extraction.py  test_context_utils.py  test_degradation.py  test_discussion.py  test_divergence.py  test_dynamic_search_fanout.py  test_effort_scaling.py  test_error_handling.py  test_existing_imports.py  test_full_pipeline.py  test_litellm_integration.py  test_logging_config.py  test_module_structure.py  test_pipeline_integration.py  test_planner_agent.py  test_production_cli.py  test_production_integration.py  test_reflection.py  test_reflection_agents.py  test_research_loop.py  test_retry.py  test_scale_validation.py  test_search.py  test_search_agent_factory.py  test_sub_question_parser.py  test_synthesis.py  test_synthesizer_agent.py
(+24 files in other folders)
